@@ -9,4 +9,4 @@
 # full path name of this file's directory.
 
 if {![package vsatisfies [package provide Tcl] 8]} {return}
-package ifneeded opt 0.4.3 [list source [file join $dir optparse.tcl]]
+package ifneeded opt 0.4.4 [list source [file join $dir optparse.tcl]]
